--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,14 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: JVM tests
+      - name: Run JVM tests
         run: ./gradlew jvmTest
+
+  test-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run Linux tests
+        run: ./gradlew linuxX64Test
