--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run Linux tests
         run: ./gradlew linuxX64Test
 
-  test-window:
+  test-windows:
     runs-on: windows-latest
 
     steps:
