--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,23 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: JVM tests
+      - name: Run JVM tests
         run: ./gradlew jvmTest
+
+  test-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run Linux tests
+        run: ./gradlew linuxX64Test
+
+  test-macos:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run macOS tests
+        run: ./gradlew macosX64Test
