--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build
-        run: ./gradlew compileTestKotlinJvm compileKotlinJvm
+        run: ./gradlew jvmTestClasses
 
       - name: Run JVM tests
         run: ./gradlew jvmTest
