--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   test-jvm:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - uses: actions/setup-java@v1.4.3
@@ -25,9 +26,11 @@ jobs:
 
       - name: Run JVM tests
         run: ./gradlew jvmTest
+        timeout-minutes: 10
 
   test-linux:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
@@ -37,9 +40,11 @@ jobs:
 
       - name: Run Linux tests
         run: ./gradlew linuxX64Test
+        timeout-minutes: 10
 
   test-macos:
     runs-on: macos-latest
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
@@ -49,3 +54,4 @@ jobs:
 
       - name: Run macOS tests
         run: ./gradlew macosX64Test
+        timeout-minutes: 10
