--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -1,4 +1,4 @@
-name: CI Tests
+name: Linux Tests
 
 on:
   push:
@@ -10,24 +10,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-jvm:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-
-    steps:
-      - uses: actions/setup-java@v1.4.3
-        with:
-          java-version: "11"
-
-      - uses: actions/checkout@v2
-
-      - name: Build
-        run: ./gradlew jvmTestClasses
-
-      - name: Run JVM tests
-        run: ./gradlew jvmTest
-        timeout-minutes: 10
-
   test-linux:
     runs-on: ubuntu-latest
     timeout-minutes: 30
