--- a/.github/workflows/test-jvm.yml
+++ b/.github/workflows/test-jvm.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   test-jvm:
     runs-on: ubuntu-latest
-    #timeout-minutes: 30
+    timeout-minutes: 30
 
     steps:
       - uses: actions/setup-java@v1.4.3
@@ -26,4 +26,4 @@ jobs:
 
       - name: Run JVM tests
         run: ./gradlew jvmTest
-        #timeout-minutes: 10
+        timeout-minutes: 10
