--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   test-linux:
     runs-on: ubuntu-latest
-    #timeout-minutes: 30
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
@@ -22,4 +22,4 @@ jobs:
 
       - name: Run Linux tests
         run: ./gradlew linuxX64Test
-        #timeout-minutes: 10
+        timeout-minutes: 10
