--- a/.github/workflows/test-jvm.yml
+++ b/.github/workflows/test-jvm.yml
@@ -15,9 +15,10 @@ jobs:
     timeout-minutes: 30
 
     steps:
-      - uses: actions/setup-java@v1.4.3
+      - uses: actions/setup-java@v2
         with:
-          java-version: "11"
+          distribution: 'adopt'
+          java-version: '16'
 
       - uses: actions/checkout@v2
 
